--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "svelte": "^4.2.2",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
+  },
+  "devDependencies": {
+    "sass": "^1.69.4"
   }
 }
