--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fontsource/inter": "^5.0.13",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@storyblok/astro": "^3.0.0",
+    "@vercel/node": "^3.0.7",
     "astro": "^3.3.2",
     "clone-deep": "^4.0.1",
+    "nodemailer": "^6.9.7",
     "svelte": "^4.2.2",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
